media/css/zamboni/discovery-pane.css
/* ... */
.html-rtl #mission,
.html-rtl #my-account {
    float: left;
}

#mission p,
#my-account p {
    font: 15px/1.1 MetaWebPro-Book, "Trebuchet MS", sans-serif;
    margin: 0 0 .5em;
}

#mission a,
#mission strong,
#my-account a,
#my-account strong {
    font-family: MetaWebPro-Bold, "Trebuchet MS", sans-serif;
    font-weight: bold;
}

#mission #download-count,
#my-account #download-count {
    font-size: 1em;
}

/* @Main @Feature *********/
#main #main-feature {
    position: relative;
    padding: 0;
    background: transparent;
    border: 0;
    box-shadow: none;
}

.feature {
    background: rgba(255,255,255,0.35) no-repeat;
    border: 1px solid #a8b8d1;
    box-shadow: inset 0 1px 3px rgba(58,78,103,0.15), 0 1px 0 rgba(255,255,255,0.5);
    margin-bottom: 10px;
    min-height: 240px;
    padding: 10px 9%;
    border-radius: 8px;
}

#main #main-feature.js {
    height: 273px;
    overflow: hidden;
}

#main-feature.js .feature {
    height: 251px;
    position: relative;
    overflow: hidden;
    box-shadow: none;
}

.slider {
    list-style: none;
    margin: 0;
    padding: 0;
}

.panel {
    width: 100%;
    top: 0;
}

#nav-features {
    height: 0;
    margin: 0;
    display: none;
}

#main-feature.js #nav-features {
    display: block;
}

#nav-features a {
    position: absolute;
    top: 0;
    margin: 1px;
    z-index: 10;
    display: block;
    height: 271px;
    width: 4%;
    text-indent: -999em;
    text-decoration: none;
    overflow: hidden;
    opacity: 0.3;
    -moz-transition-property: opacity, width;
    -moz-transition-duration: 0.5s;
    -moz-transition-timing-function: ease-out;
}

#nav-features a:hover,
#nav-features a:active {
    opacity: 1;
    width: 7%;
    -moz-transition-property: opacity, width, background-color;
    -moz-transition-duration: 0.2s;
    -moz-transition-timing-function: ease-out;
}

#nav-features a:focus {
    outline: 0;
}

#nav-prev a {
    left: 0;
    border-radius: 8px 0 0 8px;
    background: url("../../img/zamboni/discovery_pane/arrow-left.png") no-repeat center center, -moz-linear-gradient(left, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0.5) 80%);
    box-shadow: inset rgba(255,255,255,0.1) 0px 0px 6px, rgba(125,125,125, 0.1) 1px 0px 3px;
}

.html-rtl #nav-prev a {
    border-radius: 0 8px 8px 0;
}

#nav-prev a:hover,
#nav-prev a:active {
    box-shadow: inset rgba(255,255,255,0.4) 0px 0px 6px, rgba(125,125,125,0.1) 2px 0px 3px;
}

#nav-next a {
    right: 0;
    border-radius: 0 8px 8px 0;
    background: url("../../img/zamboni/discovery_pane/arrow-right.png") no-repeat center center, -moz-linear-gradient(right, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0.5) 80%);
    box-shadow: inset rgba(255,255,255,0.1) 0px 0px 6px, rgba(125,125,125, 0.1) -1px 0px 3px;
}

.html-rtl #nav-next a {
    border-radius: 8px 0 0 8px;
}

#nav-next a:hover,
#nav-next a:active {
    box-shadow: inset rgba(255,255,255,0.4) 0px 0px 6px, rgba(125,125,125,0.1) -2px 0px 3px;
}

/* @Rock Your Firefox (@RYFF) *********/
.ryff {
    position: relative;
    overflow: hidden;
    padding: 10px 10% 10px 230px;
    background: #fbf1cc url("../../img/zamboni/discovery_pane/bg-ryff.jpg") 5% 0 no-repeat;
    color: #333;
}

.ryff h2 {
    margin: 0 0 10px;
    white-space: nowrap;
}

.ryff h3 {
    margin: 15px 0 .25em;
    font: bold 36px/1.1 MetaWebPro-Bold, "Trebuchet MS", sans-serif;
}

.ryff h3 a {
    color: #333;
    text-decoration: none;
}

.ryff .desc img {
    width: 40%;
    float: right;
    margin: 0 0 .5em 10px;
}

/* @Collection *********/
.collection h2,
#featured-addons h2 {
    max-width: 650px;
    margin: 10px auto;
}

.collection .more {
    text-align: center;
}

.shopping {
    background-image: url("../../img/zamboni/discovery_pane/bg-hanger.png"),
    url("../../img/zamboni/discovery_pane/bg-gift.png");
    background-position: 107% 20px, 9% 92%;
    background-repeat: no-repeat;
}

#featured-addons {
    padding: 10px 9%;
}

/* @Addon @boxes *********/
.addons {
    max-width: 650px;
    margin: 0 auto 1em;
}

.addons li {
    width: 29%;
    margin: 0 2% 1em;
    float: left;
}

.html-rtl .addons li {
    float: right;
}

.addons li:nth-child(4) {
    clear: left;
}

.addons li > a {
    display: block;
    position: relative;
    padding: 10px;
    background: -moz-linear-gradient(top, #fff 0, #ecf1f7 100%);
    border: 1px solid #b7c3d7;
    border-radius: 6px;
    box-shadow: inset 0 -2px 0 rgba(58,78,103,0.08), 0 2px 0 rgba(190,210,230,0.5);
    text-align: center;
    -moz-transition-property: border-color, box-shadow;
    -moz-transition-duration: 0.5s;
    -moz-transition-timing-function: ease-out;
}

.addons li > a:hover,
.addons li > a:focus,
.addons li > a:active {
    border-color: rgba(165,175,185,1);
    box-shadow: inset 0 -2px 0 rgba(58,78,103,0.1), 0 2px 0 rgba(190,210,230,0.85);
    -moz-transition-property: border-color, box-shadow;
    -moz-transition-duration: 0.1s;
    -moz-transition-timing-function: ease-out;
    text-decoration: none;
}

.addons h3 {
    font-size: 14px;
    line-height: 1.1;
    font-weight: bold;
    font-family: inherit;
    margin: .25em 0;
}

.addons li > a:hover h3,
.addons li > a:focus h3,
.addons li > a:active h3 {
    text-decoration: underline;
}

.addons p.desc {
    font-size: 11px;
    text-align: left;
    max-height: 4em;
    overflow: hidden;
    color: #373d48;
    margin: 0;
}

.html-rtl .addons p.desc {
    text-align: right;
}

.addons img {
    max-width: 50px;
}

/* @Top add-ons *********/
#top-addons {
    position: relative;
}

#top-addons h2,
#more-ways h2 {
    margin: -10px -10px 0;
    padding: .45em 50px .45em 10px;
    background: -moz-linear-gradient(top, #fff 0, #ecf1f7 100%);
    box-shadow: inset 0 -3px 0 rgba(58,78,103,0.05), 0 3px 0 rgba(175,195,220,.3);
    border-radius: 8px 8px 0 0;
    border-bottom: 1px solid #a8b8d1;
}

#top-addons ul {
    margin: 0 0 -10px;
}
/* ... */

